# importobot

./: .env.example  .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  Makefile  PACKAGING.md  PLAN.md  README.md  SECURITY.md  asv.conf.json  example_output.robot  example_zephyr.json  github_issue_bronze_methods.md  new_zephyr_test_data.json  package-lock.json  pylintrc  pyproject.toml  pyrightconfig.json  setup.cfg  test-results.xml
.github/: SECURITY.md  dependabot.yml
.github/workflows/: claude-code-review.yml  claude.yml  lint.yml  publish-packages.yml  security.yml  test.yml  typecheck.yml  update-benchmark-images.yml  wiki-sync.yml
benchmarks/: __init__.py  conversion.py
docs/: API_RETRIEVAL_PLAN.md  ZEPHYR_ENHANCEMENT_PLAN.md  bayesian_scorer_mathematical_review.md  mathematical_bayesian_redesign.md
examples/: pipeline_example.sh  test_file.txt
examples/json/: appium_mobile_login.json  cat_small_file.json  chmod_file.json  chown.json  cp_file.json  database_api_test.json  get_file.json  hash_compare.json  hash_file.json  hash_file_improved.json  hash_verification_simple.json  hostname.json  ip.json  ls_t.json  many_steps_test.json  mkdir.json  put.json  rm_file.json  selenium_web_login.json  set_config.json  ssh_file_transfer.json  ssh_tunnel_test.json  strings.json  touch.json  user_registration.json
examples/resources/: Setup.resource  example.resource
examples/robot/: set_config.robot
presentation/: importobot-demo.tex  importobot-v1.tex
presentation/shared/: common-setup.tex  contact-info.tex  core-content.tex  demo-specific.tex  v1-specific.tex
scripts/: Makefile  README.md  __init__.py  check-secrets.sh  generate_enterprise_tests.py  generate_zephyr_tests.py  pyproject.toml
scripts/src/importobot_scripts/: __init__.py  analyze_complexity_signals.py  analyze_empirical_p_e_not_h.py  benchmark_dashboard.py  demo_config.py  demo_configuration.py  demo_loader.py  demo_logging.py  demo_scenarios.py  demo_utilities.py  demo_validation.py  demo_visualization.py  example_advanced_features.py  example_basic_usage.py  example_cli_usage.py  generate_enterprise_tests.py  generate_zephyr_tests.py  interactive_demo.py  mutmut_pytest_runner.py  performance_benchmark.py  performance_benchmark.py.backup  test_fixtures.py  train_bayesian_parameters.py
scripts/src/importobot_scripts/benchmarks/: __init__.py  benchmark_dashboard.py  generate_asv_charts.py  performance.py  performance_benchmark.py  run_bronze_benchmark.py
scripts/src/importobot_scripts/devtools/: __init__.py  check_test_count.py
scripts/tests/: __init__.py  test_interactive_demo.py
src/importobot/: __init__.py  __init__.pyi  __main__.py  config.py  context.py  exceptions.py  telemetry.py
src/importobot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/importobot_enterprise/: __init__.py  compliance.py  hsm.py  key_rotation.py  siem.py
tests/: __init__.py  business_requirements.py  conftest.py  mock_server.py  shared_ssh_test_data.py  shared_test_data.py  shared_test_data_bronze.py  test_helpers.py  utils.py
tests/fixtures/: format_detection_fixtures.py
tests/generative/: conftest.py  test_api_retrieval_generative.py  test_blueprint_learning_generative.py  test_bronze_storage_generative.py  test_ssh_comprehensive_coverage.py  test_ssh_keyword_coverage.py  test_telemetry_edge_cases.py
tests/integration/: conftest.py  test_api_ingest_flow.py  test_api_surface.py  test_batch_processing.py  test_bronze_storage_integration.py  test_bulk_conversion.py  test_caching_integration.py  test_cli_task_blueprint.py  test_cli_task_cross_template.py  test_conversion_process.py  test_generative_robot.py  test_new_zephyr_format.py  test_positional_args.py  test_robot_execution.py  test_security_validation_cicd.py  test_selenium_execution.py  test_ssh_keyword_integration.py  test_telemetry_integration.py
tests/invariant/: README.md  __init__.py  conftest.py  test_api_retrieval_invariants.py  test_bronze_storage_invariants.py  test_configuration_invariants.py  test_conversion_pipeline_invariants.py  test_core_invariants.py  test_format_detection_invariants.py  test_medallion_invariants.py  test_security_invariants.py  test_telemetry_invariants.py
tests/performance/: conftest.py  test_api_retrieval_performance.py  test_bronze_storage_performance.py  test_cache_performance.py  test_mvlp_performance.py  test_telemetry_performance.py  test_weighted_evidence_performance.py
tests/unit/: __init__.py  test_api_clients.py  test_api_config.py  test_api_ingest_handler.py  test_api_security.py  test_api_suggestions.py  test_api_validation.py  test_automation_philosophy_compliance.py  test_builtin_keyword_generator.py  test_builtin_keyword_suggestions.py  test_builtin_keywords_coverage.py  test_business_domains.py  test_chrome_options.py  test_cli.py  test_cli_fetch_parser.py  test_cli_handlers.py  test_cli_simple.py  test_config_defaults.py  test_config_medallion.py  test_config_security.py  test_constants.py  test_context.py  test_conversion_strategies.py  test_defaults.py  test_distributions.py  test_error_handling.py  test_field_definitions.py  test_file_converter.py  test_file_download.py  test_file_operations.py  test_file_permissions.py  test_format_specific_metadata.py  test_get_file_parsing.py  test_hash_file_example.py  test_intent_parser.py  test_interfaces.py  test_json_converter.py  test_json_size_validation.py  test_keyword_generator.py  test_keyword_loader.py  (+39 more)
tests/utils/: __init__.py  performance_utils.py  test_helpers.py
wiki/: API-Examples.md  API-Reference.md  Bayesian-Redesign.md  Bayesian-Scorer-Mathematical-Review.md  Blueprint-Tutorial.md  CLAUDE.md  Changelog.md  Contributing.md  Deployment-Guide.md  FAQ.md  Getting-Started.md  Home.md  How-to-Navigate-this-Codebase.md  Key-Rotation.md  Mathematical-Foundations.md  Migration-Guide.md  PLAN.md  Performance-Benchmarks.md  Performance-Characteristics.md  README.md  Release-Notes.md  Roadmap.md  SIEM-Integration.md  Security-Standards.md  Testing-Guidelines.md  Testing.md  Usage-Examples.md  User-Guide.md  Whitepaper.md
(+253 files in other folders)
