[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "importobot-scripts"
version = "0.1.1"
description = "Demo and utility scripts for Importobot"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core dependencies for scripts
    "matplotlib>=3.5.0",
    "numpy>=1.20.0",
    "pandas>=1.5.0",
    "seaborn>=0.11.0",

    # Import the main importobot package as a dependency (local workspace member)
    "importobot",
]

[tool.uv.sources]
importobot = { workspace = true }

[project.scripts]
interactive-demo = "importobot_scripts.interactive_demo:main"
generate-enterprise-tests = "importobot_scripts.generate_enterprise_tests:main"
generate-zephyr-tests = "importobot_scripts.generate_zephyr_tests:main"
importobot-mcp = "importobot_scripts.mcp_cli:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "coverage>=7.0.0",
    "ruff>=0.1.0",
    "PyQt5>=5.15.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
    "--disable-warnings",
    "--cov=.",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-fail-under=25",
]

[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "__pycache__/*",
    ".*",
    "*/site-packages/*",
    "setup.py",
    "generate_*.py",  # Exclude utility scripts from coverage
    "interactive_demo.py",  # Main demo script - coverage not critical
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*Protocol.*:",
    "@abstract",
]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "F401", "F811"]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["importobot"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.mypy]
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true